scaffold full review: Require both CamelCase and snake_case names
* Ask the user for both the CamelCase and snake_case names, because it
is not possible to correctly extract all possible naming combinations
from only one of them.

E.g. "MyOpenCVFilter" in snake_case should be "my-opencv-filter", and
not "my-open-c-v-filter as the script previously did.

* Review all debian/ files to update to newer systems (debhelper 12).

* Follow naming conventions for GStreamer >= 1.16 (plugin .so file name
must match the plugin name in a very specific way)

--- a/scaffold/CMakeLists_root.txt.opencv.template
+++ b/scaffold/CMakeLists_root.txt.opencv.template
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 2.8)
 
-project("${nameScoreLower}")
+project("{{nameKebabCase}}")
 message(STATUS "CMake project: ${PROJECT_NAME}")
 
-message("If KurentoHelpers is not found, you need to install 'kms-cmake-utils' from the Kurento repository")
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
-find_package(KurentoHelpers REQUIRED)
+include(GNUInstallDirs) # CMAKE_INSTALL_*
+
+# Add CMake modules provided by the project, if any.
+#list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+find_package(KurentoUtils)
+if(NOT KurentoUtils_FOUND)
+  message(FATAL_ERROR "KurentoUtils not found; please install package 'kms-cmake-utils'")
+endif()
 
 message("If CodeGenerator is not found, you need to install 'kms-core' from the Kurento repository")
 include(CodeGenerator)
@@ -26,6 +32,13 @@ common_buildflags_set()
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error=unused-function")
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-error=unused-variable")
 
+# Disable error when macros __TIME__, __DATE__ or __TIMESTAMP__ are encountered
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-Wno-error=date-time" HAS_WARNING_DATE_TIME)
+if(HAS_WARNING_DATE_TIME)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-error=date-time")
+endif()
+
 string(REPLACE "." ";" VERSION_LIST ${PROJECT_VERSION})
 list(GET VERSION_LIST 0 PROJECT_VERSION_MAJOR)
 list(LENGTH VERSION_LIST _len)
@@ -40,12 +53,7 @@ set(GST_REQUIRED ^1.0.0)
 set(OPENCV_REQUIRED <5.0.0)
 
 find_package(PkgConfig)
-
-# Dependencies from GStreamer plugins
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0>=${GST_REQUIRED})
-pkg_check_modules(GSTREAMER_BASE REQUIRED gstreamer-base-1.0>=${GST_REQUIRED})
-pkg_check_modules(GSTREAMER_VIDEO REQUIRED gstreamer-video-1.0>=${GST_REQUIRED})
-pkg_check_modules(GSTREAMER_CHECK REQUIRED gstreamer-check-1.0>=${GST_REQUIRED})
 pkg_check_modules(KMSCORE REQUIRED kmscore)
 
 include(GenericFind)
@@ -54,10 +62,7 @@ generic_find(LIBNAME OpenCV VERSION ${OPENCV_REQUIRED} REQUIRED)
 # Generate file "config.h"
 set(VERSION ${PROJECT_VERSION})
 set(PACKAGE ${PROJECT_NAME})
-set(GETTEXT_PACKAGE "${nameScoreLower}")
-include(GNUInstallDirs)
-
-set(CMAKE_INSTALL_GST_PLUGINS_DIR ${CMAKE_INSTALL_LIBDIR}/gstreamer-1.0)
+set(GETTEXT_PACKAGE "{{nameKebabCase}}")
 set(KURENTO_MODULES_SO_DIR ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/${KURENTO_MODULES_DIR_INSTALL_PREFIX})
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -DHAVE_CONFIG_H")
