--- a/scaffold/config.h.cmake.template
+++ b/scaffold/config.h.cmake.template
@@ -1,5 +1,5 @@
-#ifndef __${nameUnderscoreUpper}_CONFIG_H__
-#define __${nameUnderscoreUpper}_CONFIG_H__
+#ifndef __{{nameSnakeUpperCase}}_CONFIG_H__
+#define __{{nameSnakeUpperCase}}_CONFIG_H__
 
 /* Version */
 #cmakedefine VERSION "@VERSION@"
@@ -13,4 +13,4 @@
 /* Library installation directory */
 #cmakedefine KURENTO_MODULES_SO_DIR "@KURENTO_MODULES_SO_DIR@"
 
-#endif /* __${nameUnderscoreUpper}_CONFIG_H__ */
+#endif /* __{{nameSnakeUpperCase}}_CONFIG_H__ */
