--- a/scaffold/debian-name-dev.install.template
+++ b/scaffold/debian-name-dev.install.template
@@ -1,5 +1,6 @@
 usr/include/kurento/modules/*/*.hpp
+usr/lib/*/*.a
 usr/lib/*/*.so
 usr/lib/*/pkgconfig/*.pc
+usr/share/cmake/Kurento/*.cmake
 usr/share/kurento/modules/*.kmd.json
-usr/share/cmake-*/Modules/*
