--- a/scaffold/CMakeLists.txt
+++ b/scaffold/CMakeLists.txt
@@ -1,23 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(SCAFFOLD_TEMPLATES
-  CMakeLists_plugin.txt.template
-  CMakeLists_root.txt.template
-  CMakeLists_server_plugin.txt.template
-  CMakeLists_server.txt.template
-  CMakeLists_src.txt.template
-  config.h.cmake.template
-  debian-changelog.template
-  debian-control.template
-  debian-name-dev.install.template
-  debian-name.install.template
-  debian-name.install.OpenCV.template
-  debian-rules.template
-  filter.Filter.kmd.json.template
-  filter.kmd.json.template
-  gstplugin.cpp.template
-  gstplugin.h.template
-  plugin.c.template
+file(GLOB SCAFFOLD_TEMPLATES
+  LIST_DIRECTORIES false
+  *.template
 )
 
 install(
