debian/control: Add gstreamer1.0-plugins-good-kurento
Our custom build of gstreamer1.0-plugins-good contains a fix to allow
changing resolution of VP8 videos on recording:

https://gitlab.freedesktop.org/gstreamer/gst-plugins-good/-/merge_requests/1008

--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  gstreamer1.0-libav,
  gstreamer1.0-plugins-bad,
  gstreamer1.0-plugins-base,
- gstreamer1.0-plugins-good,
+ gstreamer1.0-plugins-good-kurento,
  gstreamer1.0-plugins-ugly,
  kms-core (>= 7.0.0),
  kms-elements (>= 7.0.0),
