CMakeLists: Add missing dependency to kms-jsonrpc
Without these lines, the build system was just finding kms-jsonrpc as
installed on the system (under /usr), which made it impossible to run
Kurento with local modifications on kms-jsonrpc.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -40,6 +40,7 @@ set_property (TARGET kurento-media-server
     ${CMAKE_CURRENT_BINARY_DIR}/..
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/transport
+    ${KmsJsonRpc_INCLUDE_DIRS}
     ${KMSCORE_INCLUDE_DIRS}
     ${PROJECT_SOURCE_DIR}/3rdparty/DeathHandler
 )
