--- a/debian/control
+++ b/debian/control
@@ -93,11 +93,11 @@ Depends: ${misc:Depends},
  kms-elements-dbg,
  kms-filters-dbg,
  kms-jsonrpc-dbg,
- kmsjsoncpp-dbg,
  kurento-media-server-dbg,
  libc6-dbgsym | libc6-dbg,
  libglib2.0-0-dbgsym | libglib2.0-0-dbg,
  libgstreamer1.0-0-dbg,
+ libjsoncpp1-dbgsym,
  libnice10-dbgsym | libnice-dbg,
  libsoup2.4-1-dbgsym,
  libsrtp-kurento-dbg,
